Adds response layer, fix test cases. Removes sonar lints