@@ -1,10 +1,11 @@
 package org.lbcc.bms.bms_monolith.eventservice.dto;
 
+import lombok.Getter;
 import org.lbcc.bms.bms_monolith.common.entity.EventShow;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Getter
 public class EventShowResponse {
 
     private List<String> genres;
@@ -29,18 +30,16 @@ public class EventShowResponse {
         return new EventShowResponse(
                 show.getGenres() != null ? show.getGenres().stream()
                         .map(Enum::name)
-                        .collect(Collectors.toList()) : null,
+                        .toList() : null,
                 show.getStartDate().toString(),
                 show.getEndDate().toString(),
                 show.getSeatInShows() != null ? show.getSeatInShows().stream()
                         .map(SeatInShowResponse::fromEntity)
-                        .collect(Collectors.toList()) : null,
+                        .toList() : null,
                 show.getSeatTypeInShows() != null ? show.getSeatTypeInShows().stream()
                         .map(SeatTypeInShowResponse::fromEntity)
-                        .collect(Collectors.toList()) : null
+                        .toList() : null
         );
     }
-
-    // Additional utility methods if needed
 }
 
